# rust_experiments

./: .gitignore  Cargo.toml  full_rewrite.html  go.mod  kaigyou.html  sample_message.js  switch_return.js  vertical-align.html  viewport.html
benches/: base64.rs  header_match.rs  headers.rs  hexize.rs  itoa.rs  list_with_limit.rs  parse_request.rs  router.rs  self_referencing_slice.rs  sha1.rs  sha256.rs  string_swap.rs  vecs_append_vs_extend.rs
go/sha1/: sha1.go  sha1_test.go
migrations/: 20240525112434_todo.sql
src/: lib.rs  multipart_multiple_files.html
src/doc_hidden_associates/: mod.rs
src/header_hash/: mod.rs
src/headers/: mod.rs  ohkami.rs
src/parse_request/: mod.rs  u8slice_directly.rs  via_str.rs
src/router/: mod.rs  radix_tree.rs  regex_set.rs  single_regex.rs  trie_tree.rs  trie_tree_with_string.rs
src/router/radix_tree/: mod.rs  patterns.rs  test.rs  with_static_nodes.rs  with_vec_patterns.rs
src/router/radix_tree/range_trie_tree/: mod.rs  node.rs  pattern.rs  route.rs
src/sample_async_trait/: mod.rs
src/skip_list/: mod.rs
