[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
regex = "1.9.5"
async-std = "1"
tokio = { version = "1.26.0", features = ["full"] }
fxhash = "0.2.1"
libflate = "2.0.0"
worker = "0.0.18"
byte_reader = "1.0.0"
serde = "1.0"
base64 = "0.21.6"
hmac-sha256 = "1.1.7"
sha2 = { version = "=0.11.0-pre.0" }
sha1 = { version = "=0.11.0-pre.0" }
hmac = { version = "=0.13.0-pre.0" }
ohkami = { version = "0.12", features = ["rt_tokio"] }
async-trait = "0.1.77"
reqwest = "0.11.24"