[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
regex = "1.9.5"
async-std = "1"
tokio = { version = "1.37.0", features = ["full"] }
fxhash = "0.2.1"
libflate = "2.0.0"
worker = "0.0.18"
byte_reader = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
base64 = "0.21.6"
hmac-sha256 = "1.1.7"
sha2 = { version = "=0.11.0-pre.0" }
sha1 = { version = "=0.11.0-pre.0" }
hmac = { version = "=0.13.0-pre.0" }
async-trait = "0.1.77"
reqwest = "0.11.24"
axum = "0.7.5"
tower = "0.4.13"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
ohkami = { package = "ohkami", git = "https://github.com/kana-rus/ohkami.git", features = ["rt_tokio"] }